feat: added hour html and styles to almost everything

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -1,5 +1,7 @@
-@import './_global.sass'
+
 @import './_variables.sass'
 @import './_mixin.sass'
+@import './_global.sass'
+@import './_logo.sass'
 @import './_weather.sass'
 @import './_hour.sass'
