--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,82 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: 0.2s;
+  color: #15283a;
+}
 
+body, html {
+  position: relative;
+}
+
+body {
+  background-image: url(../assets/background.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#logo {
+  width: clamp(100px, 25%, 500px);
+  text-align: center;
+  margin: 0 37.5%;
+}
+
+#weather-div {
+  width: 350px;
+  text-align: center;
+  margin: 0 auto;
+  border-radius: 8px;
+  position: relative;
+}
+#weather-div form {
+  text-align: left;
+}
+#weather-div form button, #weather-div form input {
+  background-color: #aad8f3;
+  border: none;
+}
+#weather-div form input {
+  width: 85%;
+  padding: 5px;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+#weather-div form input::placeholder {
+  color: rgba(21, 40, 58, 0.5254901961);
+}
+#weather-div form input:focus {
+  border: none;
+}
+#weather-div form button {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 15%;
+  padding: 5px;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+#weather-div form button:hover {
+  opacity: 70%;
+}
+#weather-div h1 {
+  margin: 12px 0;
+  font-size: 32px;
+}
+#weather-div p {
+  font-size: 16px;
+  margin: 5px 0;
+}
+
+#timer {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+#timer p {
+  font-size: 26px;
+}
 
 /*# sourceMappingURL=style.css.map */
