feat: added js to timer

--- a/styles/_weather.sass
+++ b/styles/_weather.sass
@@ -35,6 +35,7 @@
             @extend %bg-config
             &:hover
                 opacity: 70%
+                cursor: pointer
     h1
         margin: 12px 0
         font-size: $fs-title
